--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "webpack-dev-server --mode development --open"
   },
   "dependencies": {
+    "@alpinejs/persist": "^3.12.0",
     "alpinejs": "^3.12.0",
     "tailwindcss": "^3.2.7"
   }
