Revert "test(#6): configures ava"
This reverts commit 4982372f3fbd71e4f2073a3e3a7184048e16b533.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
   "devDependencies": {
-    "ava": "^5.2.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.21",
@@ -19,8 +17,7 @@
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
-    "test": "ava"     
+    "start": "webpack-dev-server --mode development --open"
   },
   "dependencies": {
     "@alpinejs/persist": "^3.12.0",
