--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minitools",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/js/pomodoro.js",
   "license": "MIT",
   "devDependencies": {
     "ava": "^5.2.0",
@@ -22,8 +22,8 @@
     "test": "ava"     
   },
   "dependencies": {
-    "@alpinejs/persist": "^3.12.0",
-    "alpinejs": "^3.12.0",
-    "tailwindcss": "^3.2.7"
+    "@alpinejs/persist": "3.12.0",
+    "alpinejs": "3.12.0",
+    "tailwindcss": "3.2.7"
   }
 }
